tests/errors/example_directive_bad_arg.dang
# @example's code argument must be a string.
@example(42)
answer: Int! {
  42
}
